chore: update settings and restructure project
- Adds types for Express, Jsonwebtoken, Node, Swagger-UI-Express and Validator
- Installation of ts-node and TypeScript for the transition from JS to TS
- Creation of the tsconfig.json file
- Filling the database SQL file with data
- Refactoring the project structure to follow a modular approach
